yeet this yeast. Tested with up to 250mbmp4 file